Improved direction handling and snake movement